[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Lucas Sta Maria <lucas@priime.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
setuptools = "^67.3.2"
wheel = "^0.38.4"
spacy = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
